--- a/volumes/logstash/pipeline/from-scratch.conf
+++ b/volumes/logstash/pipeline/from-scratch.conf
@@ -2,9 +2,9 @@ input {
   jdbc {
     jdbc_driver_library => "/usr/share/logstash/mysql-connector-java-8.0.22.jar"
     jdbc_driver_class => "com.mysql.jdbc.Driver"
-    jdbc_connection_string => "jdbc:mysql://mysql:3306"
-    jdbc_user => "avid_reader"
-    jdbc_password => "i_love_books"
+    jdbc_connection_string => "jdbc:mysql://127.0.0.1:3306"
+    jdbc_user => "intellicon"
+    jdbc_password => "intellicon"
     sql_log_level => "debug"  # Set Logstash logging level as this
     clean_run => true # Set to true for indexing from scratch
     record_last_run => false
