--- a/volumes/logstash/pipeline/incremental.conf
+++ b/volumes/logstash/pipeline/incremental.conf
@@ -3,8 +3,8 @@ input {
     jdbc_driver_library => "/usr/share/logstash/mysql-connector-java-8.0.22.jar"
     jdbc_driver_class => "com.mysql.jdbc.Driver"
     jdbc_connection_string => "jdbc:mysql://mysql:3306"
-    jdbc_user => "avid_reader"
-    jdbc_password => "i_love_books"
+    jdbc_user => "intellicon"
+    jdbc_password => "intellicon"
     sql_log_level => "debug"  # Set Logstash logging level as this
     use_column_value => true
     tracking_column => "journal_id"
